--- a/Anchor.toml
+++ b/Anchor.toml
@@ -2,14 +2,14 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-pda_sharing = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+pda_sharing = "Gdq2vo1diEF2SrW6Y1vB6jaMkoRdvZyJpSstANgepntj"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "localnet"
-wallet = "/home/johnliu/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
